Random code style cleanups